fixed overflow

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,6 +1,6 @@
 .places {
-	margin-left: 25%;
-	margin-right: 25%;
+	margin-left: 20%;
+	margin-right: 20%;
 	margin-bottom: 10%;
 }
 
